<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inc_date_time_tap_hint_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/photoDate"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:background="@drawable/ripple_primary_transparent"
            android:gravity="center"
            android:hint="@string/inc_date_time_inputs_date_label"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary" />

        <TextView
            android:id="@+id/photoTime"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:background="@drawable/ripple_primary_transparent"
            android:gravity="center"
            android:hint="@string/inc_date_time_inputs_time_label"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary" />
    </LinearLayout>
</LinearLayout>